add gh-page dep & update package.json
update readme

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "react-ts-quiz-app",
   "version": "0.1.0",
+  "author": "contact@tim-corley.dev",
+  "homepage": "http://tim-corley.github.io/react-ts-quiz-app",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
