--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "json-loader": "^0.5.7",
+    "msw": "^0.33.1",
+    "react-test-renderer": "^17.0.2"
   }
 }
