--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,11 +32,18 @@ jobs:
           node-version: 14
       - name: Checkout repository
         uses: actions/checkout@v2
-      - name: Set Git User Email
-        uses: git config user.email "tcorley215@gmail.com"
-      - name: Set Git User Name
-        uses: git config user.name "Tim Corley"
-      - name: Install dependencies
-        run: yarn install
-      - name: Run deploy command
-        run: yarn deploy
+      # - name: Set Git User Email
+      #   uses: git config user.email "tcorley215@gmail.com"
+      # - name: Set Git User Name
+      #   uses: git config user.name "Tim Corley"
+      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+        run: |
+          yarn install
+          yarn build
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          branch: gh-pages
+          folder: build
+          clean: true
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
