--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,23 +24,16 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: test
     steps:
-      - name: Setup Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: 14
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      # - name: Set Git User Email
-      #   uses: git config user.email "tcorley215@gmail.com"
-      # - name: Set Git User Name
-      #   uses: git config user.name "Tim Corley"
-      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2.3.1
+
+      - name: Install and Build 🔧
         run: |
           yarn install
           yarn build
-      - name: Deploy 🚀
+
+      - name: Deploy to Github Pages 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
           branch: gh-pages
