--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
@@ -38,5 +39,3 @@ jobs:
         with:
           branch: gh-pages
           folder: build
-          clean: true
-          ssh-key: ${{ secrets.DEPLOY_KEY }}
