removing pull request trigger from main workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,7 @@
-name: Application Test and Deploy Workflow
+name: Test and Deploy on Push
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
     branches:
       - main
 
