--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.11",
+    "postcss": "^8.3.6",
+    "postcss-preset-env": "^6.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
+    "tailwindcss": "^2.2.7",
+    "twin.macro": "^2.6.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -51,5 +55,19 @@
     "json-loader": "^0.5.7",
     "msw": "^0.33.1",
     "react-test-renderer": "^17.0.2"
+  },
+  "babelMacros": {
+    "twin": {
+      "config": "./src/tailwind.config.js",
+      "preset": "styled-components",
+      "styled": {
+        "import": "default",
+        "from": "styled-components"
+      },
+      "css": {
+        "import": "css",
+        "from": "styled-components"
+      }
+    }
   }
 }
