--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.11",
+    "cypress": "^8.1.0",
     "postcss": "^8.3.6",
     "postcss-preset-env": "^6.7.0",
     "react": "^17.0.2",
@@ -28,6 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
     "eject": "react-scripts eject",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build"
@@ -51,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "eslint-plugin-cypress": "^2.11.3",
     "gh-pages": "^3.2.3",
     "json-loader": "^0.5.7",
     "msw": "^0.33.1",
