updating gh actions workflows

--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -6,8 +6,8 @@ on:
       - main
 
 jobs:
-  test:
-    name: Test
+  unit-test:
+    name: Unit Tests
     runs-on: ubuntu-latest
     steps:
       - name: Setup Node.js
