--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,14 +24,17 @@ jobs:
       - name: Run test command
         run: yarn test
 
-  cypress-run:
-    runs-on: ubuntu-20.04
+  cypress-tests:
+    name: UI Tests
+    runs-on: ubuntu-latest
     needs: unit-tests
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install dependencies
         run: yarn install
+      - name: Run App
+        run: yarn start
       - name: Cypress run
         uses: cypress-io/github-action@v2
 
