--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: [unit-tests, cypress-run]
+    needs: [unit-tests, cypress-tests]
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
